k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myflaskapp
  namespace: microservices
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myflaskapp
  template:
    metadata:
      labels:
        app: myflaskapp
    spec:
      containers:
        - name: myflaskapp-container
          image: 510025/myflaskapp:latest
          ports:
            - containerPort: 5000
