k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myflaskapp-service
  namespace: microservices
spec:
  type: LoadBalancer
  selector:
    app: myflaskapp
  ports:
    - protocol: TCP
      port: 80         # external port (publicly accessible)
      targetPort: 5000 # matches your Flask app container port
