k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myflaskapp-ingress
  namespace: microservices
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: myflaskapp.local
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: myflaskapp-service
                port:
                  number: 5000
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: myflaskapp-service
                port:
                  number: 5000
